Added SSJS version of the Loops Docs

--- a/docs/js/js-loops.mdx
+++ b/docs/js/js-loops.mdx
@@ -176,7 +176,7 @@ while (i <= 10) {
 }
 ```
 
-`while` loop is the best option for iterating over big arrays.
+`while` loop is the best option for iterating over **big** arrays.
 
 ### Do While
 
@@ -188,4 +188,4 @@ do {
 } while (run === true)
 ```
 
-Simply perfect when you need to run an API call, check whether there are more pages of outcomes and act accordingly.
+Perfect when you need to run an API call, check whether there are more pages of outcomes and act accordingly.
