--- a/docs/ssjs/ssjs-loops.mdx
+++ b/docs/ssjs/ssjs-loops.mdx
@@ -28,9 +28,9 @@ for (var i = 0; i < array.length; i++) {
 ```
 
 Let's break this down to five steps of `for` loop:
-1. Execute initial expression (`let i = 0` in the above example).
+1. Execute initial expression (`var i = 0` in the above example).
 2. Evaluate the condition (`i < array.length`). If it is false - the loop terminates. If true:
-3. The statement within the loop is executed (`console.log(array[i])`).
+3. The statement within the loop is executed (`Write(array[i])`).
 4. Finally, the increment expression will evaluate (`i++`).
 5. The loop goes back to step 2 until it is false.
 
