Simplified sidebar + small fixes to Loops content

--- a/docs/js/js-loops.mdx
+++ b/docs/js/js-loops.mdx
@@ -26,7 +26,7 @@ for (let i = 0; i < array.length; i++) {
 }
 ```
 
-Let's break this down to five steps of `for` loop:
+Let's break the script down to five steps each `for` loop follows:
 1. Execute initial expression (`let i = 0` in the above example).
 2. Evaluate the condition (`i < array.length`). If it is false - the loop terminates. If true:
 3. The statement within the loop is executed (`console.log(array[i])`).
