--- a/docs/toolset.mdx
+++ b/docs/toolset.mdx
@@ -63,7 +63,11 @@ I'm not a graphic designer. I need something that is simple, fast and can output
 
 Apart from the above main areas, I also love some smaller apps that make my life better (unfortunately, all Mac only):
 
-1. [Alfred](https://www.alfredapp.com/) is one of the best ways to keep your hands on the keyboard all the time.
+1. [Alfred](https://www.alfredapp.com/) is one of the best ways to keep your hands on the keyboard all the time. And there are tons of extensions (called workflows) that make it even better. Some of my favourite:
+    - [Convert](https://github.com/deanishe/alfred-convert) for google-like quick conversion of various units.
+    - [MDN Search](https://github.com/gilbarbara/alfred-workflows/tree/master/mdn-search) for quick search in the best source of front-end dev knowledge.
+    - [Search Notes](https://github.com/sballin/alfred-search-notes-app) is a must-have if you use Apple Notes and want to find a specific one quickly.
+    - [TerminalFinder](https://github.com/LeEnno/alfred-terminalfinder) makes it quick and easy to jump between iTerm and Finder view of the folder.
 2. [Numi](https://numi.app/) - the best calculator app you can have. By far.
 3. [Better Touch Tool](https://folivora.ai/) not only allows you to leverage gestures to their fullest but also takes care of windows snapping to the edges.
 4. [Mailplane](https://mailplaneapp.com/) - if you use Gmail and have a Mac, this app is a must.
