--- a/docs/ssjs/ssjs-loops.mdx
+++ b/docs/ssjs/ssjs-loops.mdx
@@ -54,26 +54,6 @@ for (var i = 0, itemValue = array[i], range = array.length; i < range; i++, item
 
 As ES6 [for...of](/docs/js/js-loops#for-of) loop is not available in SSJS, you will use this one in most scenarios.
 
-#### Labelled loops
-
-JavaScript support labels for loops. It allows you to name each loop for even better control with both `continue` and `break` statements.
-
-```js {1,8}
-MainLoopLabel:
-for (let i = 0; i < array.length; i++) {
-    // Logic
-    SecondaryLoopLabel:
-    for (let j = 0; j < array[i].length; j++) {
-        // Logic
-        if (array[i][j] === 'important') {
-            break MainLoopLabel;
-        };
-    };
-};
-```
-
-As you can see, in the first line we added a label for the first `for` loop. Then, in the statement within the second `for` loop, we used `break` followed by the label. Once executed, it will break both for loops, even if there were still iterations in the main one. The same approach works with the `continue` statement.
-
 ### For in
 
 `for...in` loop in modern JavaScript is used nearly exclusively for debugging. It is because it loops not only over standard values but also over object prototype methods and properties.
@@ -157,3 +137,25 @@ do {
 ```
 
 Perfect when you need to run an API call, check whether there are more pages of outcomes and act accordingly.
+
+:::note You Should Know
+
+JavaScript support labels for loops. It allows you to name each loop for even better control with both `continue` and `break` statements.
+
+```js {1,8} title="Labelled loop example using a nested for loops"
+MainLoopLabel:
+for (var i = 0; i < array.length; i++) {
+    // Logic
+    SecondaryLoopLabel:
+    for (var j = 0; j < array[i].length; j++) {
+        // Logic
+        if (array[i][j] === 'important') {
+            break MainLoopLabel;
+        };
+    };
+};
+```
+
+As you can see, in the first line we added a label for the first `for` loop. Then, in the statement within the second `for` loop, we used `break` followed by the label. Once executed, it will break both for loops, even if there were still iterations in the main one. The same approach works with the `continue` statement.
+
+:::
