--- a/docs/js/js-if-and-switch.mdx
+++ b/docs/js/js-if-and-switch.mdx
@@ -21,6 +21,20 @@ for (let customer of customers) {
 }
 ```
 
+Basic `if` can be extended by adding optional `else if` for an additional condition with the different outcome or optional `else` for all scenarios not caught by above conditions.
+
+```js {2} title="Create multiple segments for different levels of customers"
+for (let customer of customers) {
+    if (customer.purchases > 10) {
+        goldCustomerSegment.push(customer.email);
+    } else if (customer.purchases > 5) {
+        silverCustomerSegment.push(customer.email);
+    } else {
+        bronzeCustomerSegment.push(customer.email);
+    }
+}
+```
+
 ### And, Or, Brackets
 
 The `if` statement is even more powerful if you also use ORs (`||`), ANDs (`&&`) and brackets:
@@ -58,7 +72,7 @@ for (let customer of customers) {
 }
 ```
 
-Bang not only functions as a NOT operator, it also changes truthy and falsy values into a (opposite) boolean.
+Bang not only functions as a NOT operator but also changes truthy and falsy values into an (opposite) boolean.
 
 Falsy values in JavaScript are: `false`, `0`, empty string `""`, `null`, `undefined`, `NaN`.
 All other possible values are considered truthy.
@@ -76,11 +90,11 @@ for (let customer of customers) {
 }
 ```
 
-Just to make it clear - above code is very "dirty" and can be wrriten much better (for example without `else if` by applying default value on variable initialization). Example how to write it better will be shown soon.
+To make it clear - above code is very "dirty" and can be written much better (for example without `else if` by applying default value on variable initialization). You will find an example of how to write it better later.
 
 :::note You Should Know
 
-You can leverage this feature twice by using double bang `!!` to convert truthy/falsy value into (appropriate) boolean.
+You can leverage this feature twice by using double bang `!!` to convert truthy/falsy value into an (appropriate) boolean.
 
 ```js title="If optInDate has any value (is not empty) the isOptedIn variable will evaluate to true"
 const isOptedIn = !!optInDate;
@@ -95,7 +109,7 @@ For simple, one-line `if` statements, there is also a shorthand:
 if (isOptedIn) sendEmail(emailAddress, emailID);
 ```
 
-You could probably use the `if` statements only for the logic of your code. But you shouldn't. There are some very interesing and useful alternatives worth checking out.
+You could probably use the `if` statements only for the logic of your code. But you shouldn't. There are some interesting and useful alternatives worth checking out.
 
 ----
 
@@ -121,11 +135,11 @@ for (let customer of customers) {
 }
 ```
 
-Instead of 6 lines of code, we have 1. Awesome! But how does it work? Ternary structure looks like this: `variable = condition ? valueIfTrue : valueIfFalse;`. So in the example above, if the `customer.firstName` is not empty (is truthy), it will be pushed as the value of `helloPersonalization`. If it is empty, the default value will be assigned instead.
+Instead of 6 lines of code, we have 1. Awesome! But how does it work? The ternary structure looks like this: `variable = condition ? valueIfTrue : valueIfFalse;`. So in the example above, if the `customer.firstName` is not empty (is truthy), it will be pushed as the value of `helloPersonalization`. If it is empty, the default value will be assigned instead.
 
 :::note You Should Know
 
-Ternary can be used not only for the if statement.
+The ternary can be used not only for the if statement.
 It can be awesome to customize text with interpolation:
 
 ```js title="Fill in the sentence with different words depending on boolean value of isOptedIn"
@@ -142,15 +156,15 @@ isLoggedIn ? redirectToLogInPage() : null;
 
 ----
 
-## Shortcircuting
+## Shortcircuiting
 
-We already covered using OR `||` + AND `&&` operators. But by using them correctly, you can optimize the speed of your scripts greatly. Shortcircuting fully uses the evaluation pattern of those two operators and left-to-right order of execution in JavaScript.
+We already covered using OR `||` + AND `&&` operators. But by using them correctly, you can optimize the speed of your scripts greatly. Shortcircuiting fully uses the evaluation pattern of those two operators and left-to-right order of execution in JavaScript.
 
 ### Shortcircuiting OR
 
 OR evaluates to `true` if at least one value is equal to `true`.
 
-This means that with left-to-right order of execution of JavaScript, if the left side of the OR evaluates to `true`, we know for sure that the whole statement is `true`. Checking whether the right side is also `true` is not needed. And JavaScript knows this also.
+With left-to-right order of execution in JavaScript, if the left side of the OR evaluates to `true`, we know for sure that the whole statement is `true`. Checking whether the right side is also `true` is not needed. And JavaScript knows this too.
 
 Thanks to it, if we want to use an OR statement and we suspect that one side is much faster than the other, we should use that faster on the left side.
 
@@ -162,11 +176,11 @@ for (let customer of customers) {
 }
 ```
 
-Left side in above example is a very simple and quick check, as all the data is already within the script. Right side however, might take seconds to get the data from other system and calculate the value. If the `lastPurchaseDate` is before our threshold, we don't have to waste time and API calls. Win for us, win for customer waiting for the script to finish.
+Left side in the above example is a straightforward and quick check, as all the data is already within the script. The right side, however, might take seconds to get the data from other system and calculate the value. If the `lastPurchaseDate` is before our threshold, we don't have to waste time and API calls. A win for us, a win for the customer waiting for the script to finish.
 
 ### Shortcircuiting AND
 
-Similar logic can be applied to AND operator. `&&` evaluates to `true` only if both sides are `true`. This means that if we have a condition that is simpler or we suspect might be evaluating to `false`, we should put it on the left side. If it indeed will evaluate to `false`, JavaScript won't be checking the right side of the AND operator.
+Similar logic can be applied to AND operator. `&&` evaluates to `true` only if both sides are `true`. If we have a more straightforward condition or we suspect it might evaluate to `false`, we should put it on the left side. If it indeed does that, JavaScript won't be checking the right side of the AND operator.
 
 ```js {1} title="If the email provided for login is in valid format, check if password has correct length. If yes, check if this login and password are matching pair for a user. If yes, consider the login to be valid"
 if (isValidEmail(login) && isValidPassword(password) && isValidPair(email, password)) {
@@ -174,9 +188,9 @@ if (isValidEmail(login) && isValidPassword(password) && isValidPair(email, passw
 }
 ```
 
-In the above example, we are doing multiple tests from the easiest to the hardest. Thanks to it, if the login is not in correct format for an email address, we won't have to even check the password or query our encripted database with hashed version of the password.
+In the above example, we are doing multiple tests from the easiest to the hardest. Thanks to it, if the login is not in the correct format for an email address, we won't have even to check the password or query our encrypted database with a hashed version of the password.
 
-### Defensive shortcircuiting
+### Defensive Shortcircuiting
 
 We can leverage the above mentioned behaviour of `&&` and `||` to create more robust code.
 
@@ -184,13 +198,13 @@ We can leverage the above mentioned behaviour of `&&` and `||` to create more ro
 const greetingPersonalization = `Hello ${customer.firstName}!`;
 ```
 
-This code, although looks nice, might quite easily crash. If we made error and did not provide the `customer` object prior to it, we will get `ReferenceError: Can't find variable: customer`. If the object is there, but it doesn't have property of `firstName`, we will get `TypeError: undefined is not an object (evaluating 'customer.firstName')` instead. By using shortcircuit we can write it in a safer way:
+This code might quite easily crash. If we made an error and did not provide the `customer` object before it, we will get `ReferenceError: Can't find variable: customer`. If the object is there, but it doesn't have the property `firstName`, we will get `TypeError: undefined is not an object (evaluating 'customer.firstName')` instead. By using shortcircuit, we can write it in a more safely:
 
-```js title="Before creating a string, check if the object exist and if yes - if the property exists"
+```js title="Before creating a string, check if the object was declared and if yes - if the property exists"
 const greetingPersonalization = customer && customer.firstName && `Hello ${customer.firstName}!` || `Hello Valued Customer!`;
 ```
 
-This is longer, but won't drop any error on execution (thanks to checks using `&&`). It will also check if `firstName` is empty and in such scenario provide the default version (thanks to `||`).
+Longer, but won't drop any error on execution (thanks to checks using `&&`). It will also check if `firstName` is empty and in such scenario provide the default version (thanks to `||`).
 
 Another example? This time lets simplify the code. Instead of wordy & ify discount check:
 
@@ -209,7 +223,7 @@ let finalPrice = book.price — book.price * (book.discount || 0);
 
 :::note You Should Know
 
-This is quite popular pattern especially for managing user interface compontents:
+Using shortcircuit is a quite popular pattern, especially for managing user interface components:
 
 ```js title="If the user is not an admin, shortcircuit and don't render the AdminBar component"
 isAdmin && showAdminBar()
@@ -221,26 +235,28 @@ isAdmin && showAdminBar()
 
 ## Switch Statement
 
-Sometimes you have a lot of options for a single condition. You could write it with simple `if`, but the `switch` might be much more readable.
+Sometimes you have many options for a single condition. You could write it with simple `if`, but the `switch` might be much more readable than a long list of `else if` statements with conditions.
 
 ```js title="Return the name of an error provided by the ID"
-switch (error) {
-    case 400:
-        return 'Bad Request';
-    case 401:
-        return 'Unauthorized';
-    case 403:
-        return 'Forbidden';
-    case 404:
-        return 'Not Found'
-    default:
-        return 'Unknown Error';
+function errorDescription(errorID) {
+    switch (errorID) {
+        case 400:
+            return 'Bad Request';
+        case 401:
+            return 'Unauthorized';
+        case 403:
+            return 'Forbidden';
+        case 404:
+            return 'Not Found'
+        default:
+            return 'Unknown Error';
+    }
 }
 ```
 
 Some things to remember when working with a `switch`:
 
-- If multiple cases match the provided value, `switch` will execute the first from top.
+- If multiple cases match the provided value, a `switch` will execute the first from the top.
 - You can assign multiple cases to the same code block:
 
 ```js {3-5,8-9}title="Return either sum or difference of two values (sum by default)"
@@ -258,13 +274,13 @@ switch (a, operation, b) {
 }
 ```
 
-- Use either `return` statement within the case, or end the case with `break` statement. Otherwise, the switch will execute also all below cases until it encounters one of the above keywords (or hits the last scenario). Of course, there might be some edge scenarious where you want this exact behaviour to happen.
-- Always use `default` statement, even if you believe it will never be triggered (not required, but best practice). Use it to handle the scenario you haven't thought of.
-- Cases in `switch` are using strict comparision (`===`) for evaluation, so the provided value must match the case not only by value but also by type. String value of `'0'` won't trigger integer `0` case.
+- Use either `return` statement within the case, or end the case with a `break` statement. Otherwise, the switch will also execute all below cases until it encounters one of the above keywords (or hits the last scenario). Of course, there might be some edge scenarios where you want this exact behaviour to happen.
+- Always use `default` statement, even if you believe it will never be triggered (not required, but best practice). Use it to handle the scenario you haven't considered.
+- Cases in a `switch` are using strict comparison (`===`) for evaluation, so the provided value must match the case not only by value but also by type. A string value of `'0'` won't trigger an integer `0` case.
 
 :::note You Should Know
 
-By default the switch statement is a single block for the scope. If you however won't to declare variables of the same name in different cases, you can do it by adding parentheses:
+By default, the switch statement is a single block for the scope. If you, however, want to declare variables of the same name in different cases, you can do it by adding parentheses:
 
 ```js {4,7,9,12} title="Despite 'outcome' variable being initialized twice with 'let', it will not drop an error because of two different block scopes"
 switch (a, operation, b) {
